# rag-tutorial-v2

./: API_README.md  Dockerfile  README.md  api.py  aws-deployment-guide.md  cost-comparison.md  database-setup.md  deploy-aws.sh  deploy-hybrid.sh  deploy-single-vps.sh  docker-compose-simple.yml  docker-compose.yml  ec2-userdata.sh  ecs-task-definition.json  get_embedding_function.py  hybrid-aws-architecture.md  openwebui_rag_plugin.py  populate_database.py  pyproject.toml  query_data.py  query_data_enhanced.py  rag-modelfile  single-vps-deployment.md  test_api.py  web_chat.py
