[project]
name = "rag-tutorial-v2"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.37.38",
    "chromadb>=0.5.23",
    "fastapi>=0.104.0",
    "langchain>=0.0.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.3.6",
    "pypdf>=5.9.0",
    "streamlit>=1.48.0",
    "uvicorn[standard]>=0.24.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
